<resources>
    <string name="app_name">LocalStorage</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="adult">Adult?</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="latest_data">Latest Data:</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="store">Store</string>
    <string name="get">Get</string>
</resources>