<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".preferences.PreferencesActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:layout_margin="8dp"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/etName"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbAdult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adult"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/etAge"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load"
        app:layout_constraintTop_toBottomOf="@id/cbAdult"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/cbAdult"
        app:layout_constraintStart_toEndOf="@id/buttonLoad"/>

    <TextView
        android:id="@+id/txLatest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latest_data"
        android:textSize="17sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/buttonLoad"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>