<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".prefdatastore.StorePrefActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/key"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/value"
        app:layout_constraintTop_toBottomOf="@id/inputKey"/>

    <Button
        android:id="@+id/buttonStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/inputValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txLatest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latest_data"
        android:textSize="17sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/buttonGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/txLatest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputKeyForValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/value"
        app:layout_constraintBottom_toTopOf="@id/buttonGet"/>

</androidx.constraintlayout.widget.ConstraintLayout>